--- a/Vampire_Survivor/Cargo.toml
+++ b/Vampire_Survivor/Cargo.toml
@@ -6,3 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+bevy = "0.9"
+bevy_rapier2d = "0.20.0"
+leafwing-input-manager = "0.8.0"
+
+[workspace]
+resolver = "2"
